PA3/tests/bad/bad_eq.cl
class Main {
	main() : Bool {
		{
			1 = true;
			true = "String";
			1 = "Hello";
		}
	};
};